adjusted the spacing of testpage and removed an unnecessary counting of correct answers

--- a/src/styles/modules/TestPage.module.scss
+++ b/src/styles/modules/TestPage.module.scss
@@ -1,5 +1,5 @@
 .testPageContainer {
-  padding: 2rem;
+  padding: 1rem 2rem;
   height: 90vh;
   display: flex;
   flex-direction: column;
